--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,13 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to ForgeFluid
+description: ForgeFluid transforms complex workflows into seamless, adaptive processes using advanced AI technologies, enabling efficient computational task management across diverse environments.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: An Intelligent Task Automation Platform!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/forgefluid.svg
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Explore
+      link: /introduction
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
-
-import { Card, CardGrid } from '@astrojs/starlight/components';
-
-## Next steps
-
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
